--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.3",
+    "pokedex-promise-v2": "^3.1.1",
     "react": "^16.8.4",
+    "react-beautiful-dnd": "^10.0.4",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-pokemon": "^0.1.0",
+    "react-scripts": "2.1.8",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
